--- a/index2.html
+++ b/index2.html
@@ -165,7 +165,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="   https://res.cloudinary.com/dpqs31paa/image/upload/v1742194607/IMG_20250317_122502_dmazw1.jpg8  " target="_blank" class="download-button">Download CV</a>
+            <a href="maha resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
          
